--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,19 @@
+* {
+box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: 'Montserrat', sans-serif,-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
+  background: linear-gradient(to bottom,#122230 20%, #173349, #1d4c64, #3b9393);
+ -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+html{
+  scroll-behavior: smooth;
 }
 
 code {
