--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
-/* .App {
+.heading {
   text-align: center;
-} */
+  color: #fff;
+  font-size: 2rem;
+  font-weight: 600;
+  text-shadow: 0 0 10px #26f7b2, 
+  0 0 20px #26f7b2, 
+  0 0 30px #26f7b2; 
+}
