--- a/src/components/Sponsors/Sponsors.css
+++ b/src/components/Sponsors/Sponsors.css
@@ -4,18 +4,43 @@
     align-items: center;
 }
 
-.sponsors-head {
+.sponsors-card {
+    padding: 1rem;
+    background-color: #fff;
+    border-radius: 1rem;
+    margin: 1rem;
+}
+
+.sponsors-card-container {
+    display: flex;
+    justify-content: center;
+    /* width: 20rem; */
+    align-items: center;
+    text-align: center;
+}
+
+.sponsors-card img {
+    width: 12rem;
+}
+
+.sponsor-title {
     font-size: 2rem;
+    color: #fff;
     font-weight: 600;
-    text-shadow: 0 0 10px #26f7b2, 
-    0 0 20px #26f7b2, 
-    0 0 30px #26f7b2; 
-    color: white;
     text-align: center;
 }
 
 .coming-soon {
-    color: white;
-    font-size: 1.5rem;
-    font-weight: 600;
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+
+@media screen and (max-width:769px) {
+    .sponsors-card-container {
+        flex-direction: column;
+    }
+    .sponsors-card img {
+        width: 10rem;
+    }
 }
