--- a/src/components/Sponsors/Sponsors.css
+++ b/src/components/Sponsors/Sponsors.css
@@ -14,7 +14,7 @@
 .sponsors-card-container {
     display: flex;
     justify-content: center;
-    /* width: 20rem; */
+    flex-wrap:wrap;
     align-items: center;
     text-align: center;
 }
